<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/recipes"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Recipes" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/Favourites" />

        <item
            android:id="@+id/restaurants"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/Resturants" />

        <item
            android:id="@+id/myanmar_attractions_tab_layout"
            android:icon="@drawable/ic_recent_actors_24dp"
            android:title="@string/Video" />

        <item
            android:id="@+id/myanmar_attractions_notification"
            android:icon="@drawable/ic_notifications_active_24dp"
            android:title="@string/ShoppingList" />


    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_healing_24dp"
            android:title="@string/settting" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_store_mall_directory_24dp"
            android:title="@string/about_us" />
    </group>
</menu>