<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.padc.recipes.activities.RecipesDetailScreenActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/margin_medium_2"
            app:expandedTitleMarginStart="@dimen/margin_medium_2"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >


            <ImageView
                android:id="@+id/iv_recipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/drawable_background" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
            <com.padc.recipes.components.MMTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="#ffffff"
                android:orientation="vertical">

                <com.padc.recipes.components.MMTextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginRight="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/ingrediets"
                    android:textColor="@color/text_black_ish"
                    android:textSize="@dimen/text_regular_3x" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="#949292" />

                <View
                    android:id="@+id/separator1"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="#949292" />

                <LinearLayout
                    android:id="@+id/ll_ingredietns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <com.padc.recipes.components.MMButton
                    android:id="@+id/btn_add_to_shopping_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/add_shopping_list" />

                <com.padc.recipes.components.MMButton
                    android:id="@+id/btn_remove_from_shopping_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:text="@string/remove_from_shoppingList" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_step_by_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:background="#ffffff"
                android:orientation="vertical">

                <com.padc.recipes.components.MMTextView
                    android:id="@+id/tv_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginRight="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/step_by_step"
                    android:textColor="@color/text_black_ish"
                    android:textSize="@dimen/text_regular_3x" />

                <View
                    android:id="@+id/separator2"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="#949292" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="#ffffff"
                android:orientation="vertical">

                <com.padc.recipes.components.MMTextView
                    android:id="@+id/tv_availableshop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginRight="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="ရရွိႏိုင္ေသာဆိုင္မ်ား"
                    android:textSize="@dimen/text_regular_3x" />

                <View
                    android:id="@+id/separator3"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="#949292" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium_2"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_ykko"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/ykko" />

                            <com.padc.recipes.components.MMTextView
                                android:id="@+id/tv_ykko"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:text="YKKO" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_taipot"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/taipot" />

                            <com.padc.recipes.components.MMTextView
                                android:id="@+id/tv_taipot"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:text="Tai Pot" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_yangon"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/yangon" />

                            <com.padc.recipes.components.MMTextView
                                android:id="@+id/tv_yangongrill"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:text="Yangon Grill and Chill" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_yangon1"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="@dimen/image_height"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/yangon" />

                            <com.padc.recipes.components.MMTextView
                                android:id="@+id/tv_yangongrill1"
                                android:layout_width="@dimen/image_width"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/margin_medium"
                                android:text="Yangon Grill and Chill" />
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_black_24dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end|right" />

</android.support.design.widget.CoordinatorLayout>
